--- a/product2.html
+++ b/product2.html
@@ -154,7 +154,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-12">
                 <div>
                     <h2 class="text-2xl mb-6">Cafe Elegent</h2>
-                    <p class="text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, reprehenderit?</p>
+                    <p class="text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, reprehenderit lorem?</p>
                 </div>
                 <div>
                     <h3 class="text-2xl mb-6">Visit Us</h3>
