--- a/product.html
+++ b/product.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <header class="container mx-auto px-20 bg-white py-5  ">
-        <div class="flex justify-between items-center">
-            <div class="flex justify-center items-center gap-10 font-bold">
+        <div class="grid justify-between items-center">
+            <div class="grid  justify-center items-center gap-10 font-bold">
                 <a href="#" class="text-2xl font-bold ">E-commerce</a>
             </div>
             <nav>
-                <ul class="hidden md:flex justify-center items-center gap-5">
+                <ul class="hidden grid justify-center items-center gap-5">
                     <li><a href="#" class="text-gray-500 hover:text-gray-900">Home</a></li>
                     <li><a href="#"class="text-gray-500 hover:text-gray-900">Shop</a></li>
                     <li><a href="#"class="text-gray-500 hover:text-gray-900">Categories</a></li>
